--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,39 @@
   background-size: cover;
 }
 #hero-content {
-  width: 300px;
+  width: 400px;
   background-color: rgba(51, 47, 47, 0.8);
   border-radius: 8px;
+  box-shadow: 2px 4px rgba(252, 196, 196, 0.8);
   text-align: center;
   padding: 50px 0;
   margin: 0 auto;
+  position: relative;
+  top: 150px;
+}
+#hero-content h1 {
+  color: #ffff;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+#hero-conten p {
+  color: #ffff;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+
+#hero-content a {
+  text-decoration: none;
+  background-color: rgb(255, 251, 0);
+  padding: 12px 24px;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(252, 196, 196, 0.8);
+}
+#hero-content a:hover {
+  background-color: rgb(255, 238, 0);
 }
