--- a/css/shared.css
+++ b/css/shared.css
@@ -1,24 +1,57 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 
 body {
-  background-color: black;
+  background: black;
+  /* background: linear-gradient(30deg, rgb(71, 69, 70), rgb(0, 0, 0)); */
   color: white;
+}
+
+#main-header nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+#logo {
+  font-size: 2rem;
+  font-weight: bold;
+  color: rgb(238, 164, 80);
+  text-transform: uppercase;
+}
+
+.menu-btn {
+  display: flex;
+  width: 3rem;
+  height: 3rem;
+  flex-direction: column;
+  justify-content: space-around;
+  display: none;
+}
+
+.menu-btn span {
+  width: 100%;
+  height: 3px;
+  background-color: white;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 60px;
+  padding: 1rem 3rem;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 header div a {
-  padding: 10px;
+  padding: 1rem;
   font-family: "Special Elite";
   color: rgb(245, 243, 160);
-  font-size: 30px;
+  font-size: 2.5rem;
   text-decoration: none;
-  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  text-shadow: 2px 2px 1px rgba(125, 55, 12, 2);
 }
 
 header div a:hover {
@@ -30,20 +63,24 @@ header nav ul {
   list-style: none;
 }
 header nav ul li a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: rgb(245, 243, 160);
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
-  font-size: 24px;
-  margin-left: 20px;
+  font-size: 2rem;
+  margin-left: 1.5rem;
   text-decoration: none;
 }
 
 header nav ul li a:hover {
   color: #46fc46;
+  background-color: rgba(252, 252, 252, 0.3);
+  padding: 0.4rem 0.4rem;
+  border-radius: 0.4rem;
 }
 
 header h1 {
   color: #46fc46;
-  font-size: 38px;
+  font-size: 3rem;
   text-align: center;
   text-transform: uppercase;
 }
@@ -51,36 +88,162 @@ header h1 {
 main h2 {
   font-family: KacstBook;
   color: #9696ff;
-  font-size: 34px;
+  font-size: 2rem;
 }
 
 main h3 {
-  color: #c284ee;
+  color: #83a4fd;
   font-family: monospace;
-  font-size: 24px;
+  font-size: 1.4rem;
 }
 
 main h4 {
   font-family: Impact;
-  font-size: 38px;
+  font-size: 1.8rem;
   color: rgba(252, 252, 252, 0.3);
 }
 
 main p {
   font-family: Ebrima;
+  font-size: 1.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 main img {
   width: 50%;
   height: auto;
-  border-radius: 50px;
+  border-radius: 10px;
 }
 
 main a {
   font-family: Bahnschrift;
+  text-decoration: none;
+  color: rgb(202, 145, 248);
 }
 
-main li {
-  font-family: Dialog;
-  /*font-size: 24px;*/
+main a:hover {
+  color: #46fc46;
+}
+
+#side-drawer {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(29, 26, 27);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#side-drawer:target {
+  display: block;
+}
+
+#side-drawer header {
+  height: 5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgb(29, 26, 24);
+  padding: 0 5%;
+}
+
+#side-drawer ul {
+  list-style: none;
+  margin: 0;
+  padding: 4rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#side-drawer ul li {
+  margin: 1rem 0;
+}
+
+#side-drawer ul li a {
+  color: rgb(253, 239, 213);
+  font-size: 2rem;
+}
+
+.cv {
+  position: relative;
+  top: 9rem;
+}
+
+#apps {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 5px 5px;
+  padding: 0 0;
+}
+
+#apps li {
+  display: flex;
+  background-color: rgba(136, 133, 133, 0.288);
+  box-shadow: 1px 2px rgb(221, 10, 10);
+  border-radius: 6px;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+footer ul li {
+  padding-left: 3rem;
+}
+
+#timeline {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#timeline li:nth-of-type(even) {
+  grid-column: 1 / 3;
+}
+#timeline li:nth-of-type(odd) {
+  grid-column: 2 / 3;
+}
+.cv {
+  top: 5rem;
+}
+.cv ul {
+  display: grid;
+  grid-template-columns: 0.4fr 1.6fr;
+  list-style: none;
+}
+
+.cv li:nth-of-type(even) {
+  background-color: #2b16eea1;
+  color: rgba(206, 115, 41, 0.993);
+  align-self: center;
+}
+.footer-cv {
+  top: 12rem;
+  position: relative;
+}
+
+@media (max-width: 48rem) {
+  /* .menu-btn {
+    display: flex;
+  } */
+  /* main h1 {
+    font-size: 1.5rem;
+  } */
+  #logo {
+    display: block;
+    font-size: 1.5rem;
+  }
+  #apps {
+    grid-template-columns: 1fr;
+  }
+  main section {
+    padding-top: 5rem;
+  }
+  /* #main-header nav {
+    display: none;
+  } */
 }
